# md-to-confluence

./: AGENTS.md  README.md  go.mod  pyproject.toml
.github/actions/run-pytest/: action.yml
.github/workflows/: test.yml
cmd/mdtoconf/: main.go
converter/: converter.go  converter_test.go
md_to_confluence/: __init__.py  cli.py  converter.py
tests/: test_converter.py
